New files added

--- a/Test-Management-System/Pages/About-CSS.html
+++ b/Test-Management-System/Pages/About-CSS.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About CSS - Test Management System</title>
     <link rel="stylesheet" href="../Styles/About-Technologies.css">
-    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <a href="../Test_Management_System.html"><img class="logo" src="Images/ChitkaraUniversityLogo.png"></a>
+        <a href="../Test_Management_System.html"><img class="logo" src="../Images/ChitkaraUniversityLogo.png"></a>
         <nav class="navbar">
             <ul>
-                <li><a href="Pages/About-HTML.html">HTML</a></li>
-                <li><a href="Pages/About-CSS.html">CSS</a></li>
-                <li><a href="Pages/About-JavaScript.html">JavaScript</a></li>
-                <li><a href="Pages/About-Bootstrap.html">Bootstrap</a></li>
-                <li><a href="Pages/login.html">Take Test</a></li>
+                <li><a href="About-HTML.html">HTML</a></li>
+                <li><a href="About-CSS.html">CSS</a></li>
+                <li><a href="About-JavaScript.html">JavaScript</a></li>
+                <li><a href="About-Bootstrap.html">Bootstrap</a></li>
+                <li><a href="login.html">Take Test</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Content -->
     <div class="Technology-name">
-        <img class="Technology-logo" src="Images/CSS_logo.png">
+        <img class="Technology-logo" src="../Images/CSS_logo.png">
         <div>
             <h3 class="language-heading">CSS</h3>
             <p class="language-text">Cascading Style Sheets (CSS) is a style sheet language used for describing the
