--- a/Test-Management-System/Pages/login.html
+++ b/Test-Management-System/Pages/login.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Test Management System</title>
     <link rel="stylesheet" href="../Styles/login.css">
-    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
 <body>
     <form action="instructions.html">
         <div class="box">
             <center>
-                <img class="logo" src="Images/ChitkaraUniversityLogo.png">
+                <img class="logo" src="../Images/ChitkaraUniversityLogo.png">
                 <h1 class="heading">Test Management System</h1>
                 <hr>
             </center>
