--- a/Test-Management-System/Test_Management_System.html
+++ b/Test-Management-System/Test_Management_System.html
@@ -34,16 +34,16 @@
     </div>
     <div class="content-cards">
         <div class="HTML card">
-            <a href="Pages/About-HTML.html"><img class="card-images" src="Images/HTML5_logo.png"></a>
+            <a href="Pages/About-HTML.html"><img class="card-images" src="Images/HTML5_logo_circle.png"></a>
         </div>
         <div class="CSS card">
-            <a href="Pages/About-CSS.html"><img class="card-images" src="Images/CSS_logo_square.png"></a>
+            <a href="Pages/About-CSS.html"><img class="card-images" src="Images/CSS_logo_circle.png"></a>
         </div>
         <div class="JavaScript card">
-            <a href="Pages/About-JavaScript.html"><img class="card-images" src="Images/JavaScript_logo.png"></a>
+            <a href="Pages/About-JavaScript.html"><img class="card-images" src="Images/JavaScript_logo_circle.png"></a>
         </div>
         <div class="Bootstrap card">
-            <a href="Pages/About-Bootstrap.html"><img class="card-images" src="Images/Bootstrap_logo_square.png"></a>
+            <a href="Pages/About-Bootstrap.html"><img class="card-images" src="Images/Bootstrap_logo_circle.png"></a>
         </div>
     </div>
 
