--- a/Test-Management-System/Pages/About-Bootstrap.html
+++ b/Test-Management-System/Pages/About-Bootstrap.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Bootstrap - Test Management System</title>
     <link rel="stylesheet" href="../Styles/About-Technologies.css">
-    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <a href="../Test_Management_System.html"><img class="logo" src="Images/ChitkaraUniversityLogo.png"></a>
+        <a href="../Test_Management_System.html"><img class="logo" src="../Images/ChitkaraUniversityLogo.png"></a>
         <nav class="navbar">
             <ul>
-                <li><a href="Pages/About-HTML.html">HTML</a></li>
-                <li><a href="Pages/About-CSS.html">CSS</a></li>
-                <li><a href="Pages/About-JavaScript.html">JavaScript</a></li>
-                <li><a href="Pages/About-Bootstrap.html">Bootstrap</a></li>
-                <li><a href="Pages/login.html">Take Test</a></li>
+                <li><a href="About-HTML.html">HTML</a></li>
+                <li><a href="About-CSS.html">CSS</a></li>
+                <li><a href="About-JavaScript.html">JavaScript</a></li>
+                <li><a href="About-Bootstrap.html">Bootstrap</a></li>
+                <li><a href="login.html">Take Test</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Content -->
     <div class="Technology-name">
-        <img class="Technology-logo" src="Images/Bootstrap_logo.png">
+        <img class="Technology-logo" src="../Images/Bootstrap_logo.png">
         <div>
             <h3 class="language-heading">Bootstrap</h3>
             <p class="language-text">Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development. It contains HTML, CSS and (optionally) JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components. As of May 2023, Bootstrap is the 17th most starred project (4th most starred library) on GitHub, with over 164,000 stars. According to W3Techs, Bootstrap is used by 19.2% of all websites.</p>
