--- a/Pages/About-HTML.html
+++ b/Pages/About-HTML.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="../Test_Management_System.html"><img class="logo" src="../Images/ChitkaraUniversityLogo.png"></a>
+        <a href="../index.html"><img class="logo" src="../Images/ChitkaraUniversityLogo.png"></a>
         <nav class="navbar">
             <ul>
                 <li><a href="About-HTML.html">HTML</a></li>
