--- a/Pages/instructions.html
+++ b/Pages/instructions.html
@@ -27,7 +27,7 @@
         </h3>
     </ul>
     <hr>
-    <form action="quiz1.html">
+    <form action="quiz.html">
         <input id="checkbox" type="checkbox" required/>
         <label for="checkbox"> I have read the instructions carefully.</label>
         <br>
