--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Quiz</title>
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="../Styles/quiz.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
 
 <body>
 <header class="header bg-primary">
-        <div class="left-title">Test Management System: HTML & CSS Quiz</div>
+        <div class="left-title">Test Management System: Frontend Engineering Quiz</div>
         <div class="right-title">Total Questions: <span id="tque"></span></div>
         <div class="clearfix"></div>
     </header>
@@ -27,7 +27,7 @@
                             <fieldset class="form-group">
                                 <h4><span id="qid">1.</span> <span id="question"></span></h4>
                                 <div class="option-block-container" id="question-options">
-                                </div> <!-- End of option block -->
+                                </div>
                             </fieldset>
                             <button name="previous" id="previous" class="btn btn-success">Previous</button>
                             &nbsp;
@@ -40,7 +40,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-    <script src="quiz.js"></script>
+    <script src="../Styles/script.js"></script>
 </body>
 
 </html>
