--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="Pages/About-CSS.html">CSS</a></li>
                 <li><a href="Pages/About-JavaScript.html">JavaScript</a></li>
                 <li><a href="Pages/About-Bootstrap.html">Bootstrap</a></li>
-                <li><a href="Pages/login.html">Take Test</a></li>
+                <li><a href="Pages/signup.html" target="_blank">Take Test</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +50,7 @@
     <!-- Start Test Button & Background Image -->
     <img class="test-start-background" src="Images/Start-test-image-background.png" usemap="#Map">
     <map name="Map">
-        <area shape="rect" coords="809,354,928,396" href="Pages/login.html" target="_blank">
+        <area shape="rect" coords="809,354,928,396" href="Pages/signup.html" target="_blank">
     </map>
 
     <!-- Footer -->
