--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Test Management System</title>
-    <link rel="stylesheet" href="../Styles/login.css">
+    <title>Signup - Test Management System</title>
+    <link rel="stylesheet" href="../Styles/signup.css">
     <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
@@ -19,9 +19,19 @@
             </center>
             <center>
                 <div class="content">
+                    <div class="name">
+                        <label>Name:</label>
+                        <input type="text" placeholder="John Doe" required>
+                    </div>
+                    <br>
                     <div class="email">
                         <label>Email:</label>
                         <input type="email" placeholder="Enter your Email" required>
+                    </div>
+                    <br>
+                    <div class="phone-number">
+                        <label>Phone:</label>
+                        <input type="number" placeholder="Enter your mobile no." required>
                     </div>
                     <br>
                     <div class="password">
@@ -32,7 +42,7 @@
                     <div>
                         <input class="submit" type="submit" value="Submit">
                     </div>
-                    <p>Don't have an account yet? <span class="login-text"><a href="signup.html">Sign Up</a></span></p>
+                    <p>Already have an account? <span class="login-text"><a href="login.html">Login</a></span></p>
                 </div>
             </center>
         </div>
